dark mode textareas, fixes #182

--- a/app/static/scss/_colours.scss
+++ b/app/static/scss/_colours.scss
@@ -2,6 +2,7 @@ $primary-colour: #0071CE;
 $primary-colour-hover: #0A5CA0;
 $green: #00b550;
 $green-hover: #83f188;
+$lightest-grey: #eee;
 $light-grey: #ddd;
 $grey: #bbb;
 $dark-grey: #777;
